<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>de.MCmoderSD</groupId>
    <artifactId>Omni-Moderation</artifactId>
    <version>1.1.0</version>

    <name>Omni-Moderation</name>
    <description>Omni Moderation is a Java Wrapper for the OpenAI Moderation API</description>

    <distributionManagement>
        <repository>
            <id>Nexus</id>
            <name>Sonatype Nexus</name>
            <url>https://mcmodersd.de/nexus/repository/maven-releases/</url>
        </repository>
    </distributionManagement>

    <properties>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <repositories>
        <repository>
            <id>Nexus</id>
            <name>Sonatype Nexus</name>
            <url>https://mcmodersd.de/nexus/repository/maven-releases/</url>
        </repository>
    </repositories>

    <dependencies>

        <!-- ImageLoader -->
        <dependency>
            <groupId>de.MCmoderSD</groupId>
            <artifactId>ImageLoader</artifactId>
            <version>1.4.1</version>
        </dependency>

        <!-- OpenAI -->
        <dependency>
            <groupId>com.openai</groupId>
            <artifactId>openai-java</artifactId>
            <version>4.20.0</version>
        </dependency>

        <!-- Annotations -->
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>26.0.2-1</version>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.1</version> <!-- don't change this -->
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>